--- a/Content/Custom Styles/HomePage.css
+++ b/Content/Custom Styles/HomePage.css
@@ -23,6 +23,14 @@
     height: 100vh;
 }
 
+.h-94vh {
+    height: 94vh;
+}
+
+.h-91vh {
+    height: 91vh;
+}
+
 .h-100p {
     height: 100%;
 }
@@ -38,6 +46,32 @@
 .p-2 {
     padding-left: 2px;
     padding-right: 2px;
+}
+
+.custom-navbar {
+    height: 100%;
+    margin: 2px;
+    padding: 8px 8px 12px 8px;
+    background-color: #4CB5F5;
+}
+
+.title {
+   /* border: 1px solid #ddd;*/
+    color: #555555;
+    cursor: default;
+    /*background-color: #fff;*/
+    border-radius: 4px 4px 0 0;
+    text-align: center;
+    height: 100%;
+    position: relative;
+    display: block;
+/*    padding: 10px 15px;*/
+    margin: 0;
+    font-family: 'Ubuntu', cursive;
+    font-size: x-large;
+   /* background-color: #4CB5F5;*/
+    color: white;
+    text-shadow: 3px 3px 3px black;
 }
 
 .left-panel {
@@ -476,6 +510,14 @@ input:focus-visible {
 @media only screen and (max-width: 699px) {
     .h-100vh {
         height: 97vh;
+    }
+
+    .h-94vh {
+        height: 91vh;
+    }
+
+    .h-91vh {
+        height: 88.6vh;
     }
 }
 
