--- a/Views/Home/HomePage.cshtml
+++ b/Views/Home/HomePage.cshtml
@@ -32,21 +32,38 @@
             <img class="loader" src="~/Content/Images/Fidget-spinner.gif" />
             <label class="loader-label">Loading...</label>
         </div>
-        <div class="dflex h-100vh">
+        <div class="custom-navbar">
+            <ul class="nav nav-tabs nav-justified">
+                <li class="active">
+                    @*<a href="#">Chat-Messenger</a>*@
+                    <label class="title">Chat-Messenger</label>
+                </li>
+                @*<li><a href="#">Menu 1</a></li>
+            <li><a href="#">Menu 2</a></li>
+            <li><a href="#">Menu 3</a></li>*@
+            </ul>
+            @*<ul class="nav nav-pills nav-justified">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Menu 1</a></li>
+            <li><a href="#">Menu 2</a></li>
+            <li><a href="#">Menu 3</a></li>
+        </ul>*@
+        </div>
+        <div class="dflex h-91vh">
             <div class="left-panel">
                 <table class="w-100p" id="custom-table">
                     <tbody id="custom-table-body1">
                         @*<tr>
-                                <td style="padding: 3px; border-bottom: 1px solid grey">
-                                    <div class="card-body dflex">
-                                        <div class="img-circle fake-img"></div>
-                                        <div class="dflexcol card-details">
-                                            <h3 class="custom-margin-block">Test Name</h3>
-                                            <label>Some random text message!</label>
-                                        </div>
+                            <td style="padding: 3px; border-bottom: 1px solid grey">
+                                <div class="card-body dflex">
+                                    <div class="img-circle fake-img"></div>
+                                    <div class="dflexcol card-details">
+                                        <h3 class="custom-margin-block">Test Name</h3>
+                                        <label>Some random text message!</label>
                                     </div>
-                                </td>
-                            </tr>*@
+                                </div>
+                            </td>
+                        </tr>*@
                     </tbody>
                 </table>
                 <div class="floating-div">
@@ -69,39 +86,39 @@
                     <table class="w-100p">
                         <tbody id="custom-table-body2">
                             @*<tr>
-                                    <td colspan="2" style="display: flex; justify-content: flex-end;">
-                                        <div class="custom-card-body">
-                                            <span>Hello! Whatsup!?</span>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td colspan="2" style="display: flex; justify-content: flex-start;">
-                                        <div class="custom-card-body">
-                                            Hey there! Nothing much
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td colspan="2" style="display: flex; justify-content: flex-start;">
-                                        <div class="custom-card-body">
-                                            How about you!?
-                                        </div>
-                                    </td>
-                                </tr>*@
+                                <td colspan="2" style="display: flex; justify-content: flex-end;">
+                                    <div class="custom-card-body">
+                                        <span>Hello! Whatsup!?</span>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2" style="display: flex; justify-content: flex-start;">
+                                    <div class="custom-card-body">
+                                        Hey there! Nothing much
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2" style="display: flex; justify-content: flex-start;">
+                                    <div class="custom-card-body">
+                                        How about you!?
+                                    </div>
+                                </td>
+                            </tr>*@
                         </tbody>
                     </table>
                     @*<ul>
-                            <li>
-                                Hello! Whatsup!?
-                            </li>
-                            <li>
-                                Hey there! Nothing much
-                            </li>
-                            <li>
-                                How about you!?
-                            </li>
-                        </ul>*@
+                        <li>
+                            Hello! Whatsup!?
+                        </li>
+                        <li>
+                            Hey there! Nothing much
+                        </li>
+                        <li>
+                            How about you!?
+                        </li>
+                    </ul>*@
                 </div>
                 <div id="cardFooter" class="card-footer hidden" style="height: 16%;">
                     <div class="container-fluid p-2" style="height: 100%;">
@@ -123,8 +140,8 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             @*<button type="button" class="close" data-dismiss="modal">
-                                    &times;
-                                </button>*@
+                                &times;
+                            </button>*@
                             <h4 class="modal-title">Enter Credentials</h4>
                         </div>
                         <div class="modal-body">
