--- a/Content/Custom Styles/HomePage.css
+++ b/Content/Custom Styles/HomePage.css
@@ -113,6 +113,13 @@
     border-radius: 50%;
 }
 
+.image {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: white;
+}
+
 #cardDetails {
     flex: 90%;
 }
