--- a/Views/Home/HomePage.cshtml
+++ b/Views/Home/HomePage.cshtml
@@ -75,7 +75,9 @@
             <div class="right-panel">
                 <div id="custom-card-header" class="card-header hidden" style="height: auto;">
                     <div class="card-content dflex" style="padding: 5px 7px; border-bottom: 1px solid grey; height: auto;">
-                        <div id="img-div" class="img-circle fake-img hidden" style="flex: 4%;"></div>
+                        <div id="img-div" class="img-circle fake-img hidden" style="flex: 4%;">
+                            <img src="~/assets/chat-avatar.png" class="image" alt="chat-avatar" />
+                        </div>
                         <div id="cardDetails" class="dflexcol card-details">
                             <h3 id="currentConvoUserName" class="custom-margin-block custom-header"></h3>
                             <label id="currentConvoLabel" class="custom-label"></label>
