--- a/Views/Home/HomePage.cshtml
+++ b/Views/Home/HomePage.cshtml
@@ -3,10 +3,6 @@
     Layout = null;
 }
 
-@*@section Scripts {
-        @Scripts.Render("~/Scripts/jquery.signalR-2.4.2.js");
-    }*@
-
 <!DOCTYPE html>
 
 <html>
@@ -35,36 +31,14 @@
         <div class="custom-navbar">
             <ul class="nav nav-tabs nav-justified">
                 <li class="active">
-                    @*<a href="#">Chat-Messenger</a>*@
                     <label class="title">Chat-Messenger</label>
                 </li>
-                @*<li><a href="#">Menu 1</a></li>
-            <li><a href="#">Menu 2</a></li>
-            <li><a href="#">Menu 3</a></li>*@
             </ul>
-            @*<ul class="nav nav-pills nav-justified">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Menu 1</a></li>
-            <li><a href="#">Menu 2</a></li>
-            <li><a href="#">Menu 3</a></li>
-        </ul>*@
         </div>
         <div class="dflex h-91vh">
             <div class="left-panel">
                 <table class="w-100p" id="custom-table">
-                    <tbody id="custom-table-body1">
-                        @*<tr>
-                            <td style="padding: 3px; border-bottom: 1px solid grey">
-                                <div class="card-body dflex">
-                                    <div class="img-circle fake-img"></div>
-                                    <div class="dflexcol card-details">
-                                        <h3 class="custom-margin-block">Test Name</h3>
-                                        <label>Some random text message!</label>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>*@
-                    </tbody>
+                    <tbody id="custom-table-body1"></tbody>
                 </table>
                 <div class="floating-div">
                     <button type="button" title="New Chat" class="btn btn-success floating-button" onclick="startNewChat()">
@@ -86,41 +60,8 @@
                 </div>
                 <div class="card-body" style="height: 100%; overflow: auto;">
                     <table class="w-100p">
-                        <tbody id="custom-table-body2">
-                            @*<tr>
-                                <td colspan="2" style="display: flex; justify-content: flex-end;">
-                                    <div class="custom-card-body">
-                                        <span>Hello! Whatsup!?</span>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td colspan="2" style="display: flex; justify-content: flex-start;">
-                                    <div class="custom-card-body">
-                                        Hey there! Nothing much
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td colspan="2" style="display: flex; justify-content: flex-start;">
-                                    <div class="custom-card-body">
-                                        How about you!?
-                                    </div>
-                                </td>
-                            </tr>*@
-                        </tbody>
+                        <tbody id="custom-table-body2"></tbody>
                     </table>
-                    @*<ul>
-                        <li>
-                            Hello! Whatsup!?
-                        </li>
-                        <li>
-                            Hey there! Nothing much
-                        </li>
-                        <li>
-                            How about you!?
-                        </li>
-                    </ul>*@
                 </div>
                 <div id="cardFooter" class="card-footer hidden" style="height: 16%;">
                     <div class="container-fluid p-2" style="height: 100%;">
@@ -141,9 +82,6 @@
                 <div class="modal-dialog modal-sm">
                     <div class="modal-content">
                         <div class="modal-header">
-                            @*<button type="button" class="close" data-dismiss="modal">
-                                &times;
-                            </button>*@
                             <h4 class="modal-title">Enter Credentials</h4>
                         </div>
                         <div class="modal-body">
@@ -207,12 +145,10 @@
 
 </html>
 
-<script type="text/javascript" src="~/Scripts/jquery-3.4.1.js"></script>
-<script src="~/Scripts/bootstrap.js"></script>
+<script type="text/javascript" src="~/Scripts/jquery-3.4.1.min.js"></script>
+<script type="text/javascript" src="~/Scripts/bootstrap.min.js"></script>
 <script type="text/javascript" src="~/Scripts/Custom Scripts/HomePage.js"></script>
 <script type="text/javascript" src="~/Scripts/Custom Scripts/loadash.js"></script>
-@*<script src="~/Scripts/jquery.signalR-2.4.2.js"></script>*@
 
-<script src="~/Scripts/jquery.signalR-2.4.2.js"></script>
 <script src="~/Scripts/jquery.signalR-2.4.2.min.js"></script>
 <script src="~/signalr/hubs"></script>
