--- a/Views/Home/HomePage.cshtml
+++ b/Views/Home/HomePage.cshtml
@@ -49,7 +49,7 @@
             <div class="right-panel">
                 <div id="custom-card-header" class="card-header hidden" style="height: auto;">
                     <div class="card-content dflex" style="padding: 5px 7px; border-bottom: 1px solid grey; height: auto;">
-                        <div id="img-div" class="img-circle fake-img hidden" style="flex: 4%;">
+                        <div id="img-div" class="img-circle fake-img hidden">
                             <img src="~/assets/chat-avatar.png" class="image" alt="chat-avatar" />
                         </div>
                         <div id="cardDetails" class="dflexcol card-details">
